--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -91,7 +91,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HarleyTherapy/743999692162894-speech-and-language-therapist'>Harley Therapy Speech and Language Therapist | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HarleyTherapy/743999692162894-speech-and-language-therapist'>Harley Therapy Speech and Language Therapist | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -115,7 +115,7 @@ TIM) provides comprehensive rehabilitation therapy and management services?...</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4338247002'>Job Application for Pediatric Speech Language Pathologist (SLP) at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4338247002'>Job Application for Pediatric Speech Language Pathologist (SLP) at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -200,7 +200,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691841521-speech-language-pathologist-slp-needed-for-home-health-in-perris'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Perris | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691841521-speech-language-pathologist-slp-needed-for-home-health-in-perris'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Perris | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -272,7 +272,7 @@ Education Support. Full-Time 2019-2020 School Year. Apply for this job.</p>
 <p>Jun 27, 2019 ... Marquardt Home and Community Based Services Inc is now hiring a Speech 
 Language Pathologist - SLP - PRN - Home Health in Watertown, Wisconsin.</p>
 <hr/>
-<h5><a href='https://careers-healthpro-rehab.icims.com/jobs/23155/full-time-speech-language-pathologist-%28slp%29--%245%2C000-bonus/job'>Full-time Speech Language Pathologist (SLP)- $5000 Bonus</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-healthpro-rehab.icims.com/jobs/23155/full-time-speech-language-pathologist-%28slp%29--%245%2C000-bonus/job'>Full-time Speech Language Pathologist (SLP)- $5000 Bonus</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jun 27, 2019 ... Coos County Nursing Home is now hiring a Full-time Speech Language 
 Pathologist (SLP)- $5000 Bonus in Berlin, New Hampshire. Review all of the job 
@@ -286,7 +286,7 @@ details?...</p>
 <p><span class="badge badge-light">Schaumburg, IL</span></p>
 <p>Posted on: 2019-07-09</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4349029002'>Job Application for ST, Speech Therapist, Senior Living at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4349029002'>Job Application for ST, Speech Therapist, Senior Living at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light">Salem</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -338,7 +338,7 @@ details?...</p>
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aces/jobs/1728611'>Job Application for Speech Language Therapist (Potential for Management Opportunities)  at ACES (Autism Comprehensive Educational Services)</a></h5> 
+<h5><a href='https://boards.greenhouse.io/aces/jobs/1728611'>Job Application for Speech Language Therapist (Potential for Management Opportunities)  at ACES (Autism Comprehensive Educational Services)</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -415,7 +415,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/HSMC1/743999690970226-speech-language-pathologist-slp-'>HSMC Speech Language Pathologist (SLP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
@@ -427,7 +427,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light">Atlanta</span></p>
 <p>Posted on: 2019-06-29</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/cortica/jobs/4338467002'>Job Application for Speech Language Pathologist at Cortica</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/cortica/jobs/4338467002'>Job Application for Speech Language Pathologist at Cortica</a></h5> 
 <p><span class="badge badge-light">Torrance, CA</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
